@@ -33,6 +33,8 @@ class Campaign < ActiveRecord::Base
   has_many    :activities, :as => :subject, :order => 'created_at DESC'
   named_scope :only, lambda { |filters| { :conditions => [ "status IN (?)" + (filters.delete("other") ? " OR status IS NULL" : ""), filters ] } }
 
+  simple_column_search :name, :match => :middle, :escape => lambda { |query| query.gsub(/[^\w\s\-]/, "").strip }
+
   uses_mysql_uuid
   uses_user_permissions
   acts_as_commentable
