@@ -1,4 +1,5 @@
 .filters#filters
+  = render :partial => "common/search"
   - Setting.invert(:campaign_status).each do |key, value|
     .check_box{:style => "border-bottom: 1px silver dotted;"}
       %div{:style => "float:right;"}
